Fix team alignment

--- a/app/assets/stylesheets/_team-member.scss
+++ b/app/assets/stylesheets/_team-member.scss
@@ -11,6 +11,9 @@
 .team-member__posts {
   @include grid-container;
   @include grid-collapse;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .team-member {
@@ -21,7 +24,8 @@
   @include grid-media($medium-grid) {
     @include grid-column(3.5);
     @include grid-push(0.5);
-    margin-bottom: 0;
+    margin-bottom: 10px;
+    margin-top: 10px;
 
     &:first-child {
       @include grid-push(0);
